<resources>
    <string name="app_name">MyApp</string>
    <string name="titulo">App Ingles</string>
    <string name="siguiente">Siguiente</string>
    <string name="menu">MENU</string>
    <string name="colores">COLORES</string>
    <string name="frutas">FRUTAS</string>
    <string name="aminales">ANMALES</string>
    <string name="red">RED</string>
    <string name="pink">PINK</string>
    <string name="blue">BLUE</string>
    <string name="orange">ORANGE</string>
    <string name="banana">BANANA</string>
    <string name="apple">APPLE</string>
    <string name="cow">COW</string>
    <string name="cat">CAT</string>
    <string name="dog">DOG</string>
    <string name="animals">ANIMALS</string>
    <string name="fruits">FRUITS</string>
    <string name="item1">Opcion 1</string>
    <string name="item2">Opcion 2</string>
    <string name="item3">Opcion 3</string>




    <string name="txt_codigo">Codigo Producto</string>
    <string name="txt_descripcion">Descripcion del Producto</string>
    <string name="txt_precio">Precio del Producto</string>
    <string name="BotonRegistrar">Registrar Producto</string>
    <string name="BotonBuscar">Buscar Producto</string>
    <string name="BotonEliminar">Eliminar Producto</string>
    <string name="BotonModificar">Modificar Producto</string>

</resources>