<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ejercicio">


    <EditText
        android:id="@+id/etCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_margin="20dp"
        android:hint="@string/txt_codigo"/>

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:layout_margin="20dp"
        android:hint="@string/txt_descripcion"/>

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_margin="20dp"
        android:hint="@string/txt_precio"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BotonRegistrar"
        android:layout_gravity="center"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Btn_Buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BotonBuscar"
        android:layout_gravity="center"/>


</LinearLayout>