<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuApp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:layout_gravity="center"
        android:layout_margin="45dp"
        android:textSize="40sp"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/colores"
        android:layout_gravity="center"
        android:layout_margin="45dp"
        android:backgroundTint="#000000"/>


    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/frutas"
        android:layout_gravity="center"
        android:layout_margin="45dp"
        android:backgroundTint="#000000"/>


    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/aminales"
        android:layout_gravity="center"
        android:layout_margin="45dp"
        android:backgroundTint="#000000"/>

</LinearLayout>