<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".frutas">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fruits"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:layout_margin="30dp"
        android:textColor="#000000"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/banana"
                />
        </androidx.cardview.widget.CardView>



        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/banana"
            android:layout_gravity="center"
            android:backgroundTint="#000000"
            />



    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="horizontal">


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/apple"
                />
        </androidx.cardview.widget.CardView>



        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/apple"
            android:layout_gravity="center"
            android:backgroundTint="#000000"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="horizontal">


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/orange"
                />
        </androidx.cardview.widget.CardView>



        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/orange"
            android:layout_gravity="center"
            android:backgroundTint="#000000"
            />

    </LinearLayout>

</LinearLayout>