<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".colores">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colores"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:layout_margin="30dp"
        android:textColor="#000000"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/red"
                />
        </androidx.cardview.widget.CardView>



        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/red"
            android:layout_gravity="center"
            android:backgroundTint="#000000"
            />



    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="horizontal">


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/pink"
                />
        </androidx.cardview.widget.CardView>



        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/pink"
            android:layout_gravity="center"
            android:backgroundTint="#000000"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="horizontal">


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/blue"
                />
        </androidx.cardview.widget.CardView>



        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            android:layout_gravity="center"
            android:backgroundTint="#000000"
            />

    </LinearLayout>

</LinearLayout>